// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrilldownMenu closes menu on click 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <ul
        class="MuiList-root PicassoMenuList-root"
        data-testid="menu"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-a"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item A
              </span>
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-b"
          role="menuitem"
          tabindex="-1"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item B
              </span>
              <div
                class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
              >
                <svg
                  class="PicassoSvgChevronMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`DrilldownMenu opens the first level menu on click 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <ul
        class="MuiList-root PicassoMenuList-root"
        data-testid="menu"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-a"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item A
              </span>
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light Mui-selected PicassoMenuListItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
          data-testid="item-b"
          role="menuitem"
          tabindex="-1"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item B
              </span>
              <div
                class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
              >
                <svg
                  class="PicassoSvgChevronMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        class="PicassoPopper-root"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px;"
        x-placement="right"
      >
        <div
          class="MuiPaper-root PicassoDrilldownMenuItem-content MuiPaper-elevation1"
        >
          <ul
            class="MuiList-root PicassoMenuList-root"
            data-testid="menu-b"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              data-testid="item-b1"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B1
                  </span>
                  <div
                    class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
                  >
                    <svg
                      class="PicassoSvgChevronMinor16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              data-testid="item-b2"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B2
                  </span>
                  <div
                    class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
                  >
                    <svg
                      class="PicassoSvgChevronMinor16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrilldownMenu opens the second level menu on click 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <ul
        class="MuiList-root PicassoMenuList-root"
        data-testid="menu"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-a"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item A
              </span>
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light Mui-selected PicassoMenuListItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
          data-testid="item-b"
          role="menuitem"
          tabindex="-1"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item B
              </span>
              <div
                class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
              >
                <svg
                  class="PicassoSvgChevronMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
      <div
        class="PicassoPopper-root"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px;"
        x-placement="right"
      >
        <div
          class="MuiPaper-root PicassoDrilldownMenuItem-content MuiPaper-elevation1"
        >
          <ul
            class="MuiList-root PicassoMenuList-root"
            data-testid="menu-b"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light Mui-selected PicassoMenuListItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
              data-testid="item-b1"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B1
                  </span>
                  <div
                    class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
                  >
                    <svg
                      class="PicassoSvgChevronMinor16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              data-testid="item-b2"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B2
                  </span>
                  <div
                    class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
                  >
                    <svg
                      class="PicassoSvgChevronMinor16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="PicassoPopper-root"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px;"
        x-placement="right"
      >
        <div
          class="MuiPaper-root PicassoDrilldownMenuItem-content MuiPaper-elevation1"
        >
          <ul
            class="MuiList-root PicassoMenuList-root"
            data-testid="menu-b1"
            role="menu"
            tabindex="-1"
          >
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              data-testid="item-b1-1"
              role="menuitem"
              tabindex="0"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B1-1
                  </span>
                </div>
              </div>
            </li>
            <li
              aria-disabled="false"
              class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
              data-testid="item-b1-2"
              role="menuitem"
              tabindex="-1"
            >
              <div
                class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
              >
                <div
                  class="PicassoContainer-centerAlignItems PicassoContainer-flex"
                >
                  <span
                    class="PicassoMenuListItem-stringContent"
                  >
                    Item B1-2
                  </span>
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DrilldownMenu renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <ul
        class="MuiList-root PicassoMenuList-root"
        data-testid="menu"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-a"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item A
              </span>
            </div>
          </div>
        </li>
        <li
          aria-disabled="false"
          class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuListItem-root PicassoMenuListItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
          data-testid="item-b"
          role="menuitem"
          tabindex="-1"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuListItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuListItem-stringContent"
              >
                Item B
              </span>
              <div
                class="PicassoContainer-leftxsmallMargin PicassoContainer-flex PicassoContainer-inline"
              >
                <svg
                  class="PicassoSvgChevronMinor16-root"
                  style="min-width: 16px; min-height: 16px;"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M5.997 3.29l4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707z"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
